--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -80,6 +80,8 @@ verifier:
 platforms:
   # - name: ubuntu-16.04
   - name: centos-7
+    transport:
+      username: root
 
 suites:
   - name: default
